--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -46,8 +46,10 @@
         <div class="ibo-modal" data-role="ibo-modal">TODO 3.1: Please wait</div>
     </template>
 
-    {# do not show again template #}
-    {{ render_block(aTemplates.oTemplateDoNotShowAgainOption, {aPage: aPage})  }}
+    {# templates #}
+    {% for oTemplate in aTemplates %}
+        {{ render_block(oTemplate, {aPage: aPage})  }}
+    {% endfor %}
 
 {% endblock %}
 
