--- a/templates/base/components/datatable/row-actions/handler.js.twig
+++ b/templates/base/components/datatable/row-actions/handler.js.twig
@@ -25,10 +25,11 @@
             CombodoModal.OpenConfirmationModal({
                 title: '{{ 'UI:Datatables:RowActions:ConfirmationDialog'|dict_s }}',
                 content: sMessage.replaceAll('{item}', aRowData['{{ aAction.confirmation.message_row_data }}']),
+                callback_on_confirm: ActionRowFunction{{ oUIBlock.GetId() }}{{ loop.index0 }},
                 {% if aAction.confirmation.do_not_show_again_pref_key is defined %}
                 do_not_show_again_pref_key: '{{ aAction.confirmation.do_not_show_again_pref_key }}',
                 {% endif %}
-            }, ActionRowFunction{{ oUIBlock.GetId() }}{{ loop.index0 }}, [oDatatable, oTrElement, iActionId, aRowData]);
+            }, [oDatatable, oTrElement, iActionId, aRowData]);
 
         {% else %}
 
