--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -46,7 +46,7 @@
         <div class="ibo-modal" data-role="ibo-modal">TODO 3.1: Please wait</div>
     </template>
 
-    {# templates #}
+    {# Templates #}
     {% for oTemplate in aTemplates %}
         {{ render_block(oTemplate, {aPage: aPage})  }}
     {% endfor %}
