--- a/css/backoffice/components/_modal.scss
+++ b/css/backoffice/components/_modal.scss
@@ -3,9 +3,12 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
+/* SCSS variables */
+$ibo-modal-option--do-not-show-again--margin-top: $ibo-spacing-500 !default;
+
 // Modal Option - Do not show again
 .ibo-modal-option--do-not-show-again{
-  margin-top: $ibo-spacing-500;
+  margin-top: $ibo-modal-option--do-not-show-again--margin-top;
 
   .ibo-modal-option--do-not-show-again--checkbox{
     height: auto;
