Feature/modals - generic modal API (#373)
Default modal JS Implementation:

Add title option
Add buttons option
Change template cloning
Confirmation Modal:

Add implementation
Do not show again functionality
Web Page:

Add blocks array with twig loop insertion

--- a/css/backoffice/components/_modal.scss
+++ b/css/backoffice/components/_modal.scss
@@ -2,3 +2,17 @@
  * @copyright   Copyright (C) 2010-2021 Combodo SARL
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
+
+/* SCSS variables */
+$ibo-modal-option--do-not-show-again--margin-top: $ibo-spacing-500 !default;
+
+// Modal Option - Do not show again
+.ibo-modal-option--do-not-show-again{
+  margin-top: $ibo-modal-option--do-not-show-again--margin-top;
+
+  .ibo-modal-option--do-not-show-again--checkbox{
+    height: auto;
+    display: inline-block;
+    width: auto;
+  }
+}
