Move datatable SCSS files under the same directory

--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -1,5 +1,5 @@
 /*
- * @copyright   Copyright (C) 2010-2021 Combodo SARL
+ * @copyright   Copyright (C) 2010-2022 Combodo SARL
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
@@ -21,8 +21,7 @@
 @import "prop";
 
 @import "title";
-@import "datatable";
-@import "datatableconfig";
+@import "datatable/all";
 @import "form";
 @import "fieldset";
 @import "field";
