--- a/templates/base/components/datatable/row-actions/handler.js.twig
+++ b/templates/base/components/datatable/row-actions/handler.js.twig
@@ -10,7 +10,7 @@
         // variables accessible from action row js
         let oDatatable = $('#{{ oUIBlock.GetId() }}').DataTable();
         let oTrElement = $(this).closest('tr');
-        let sAction = $(this).data('action');
+        let sLabel = $(this).data('label');
         let iActionId = $(this).data('action-id');
         let aRowData = oDatatable.row(oTrElement).data();
 
@@ -26,7 +26,7 @@
             CombodoModal.OpenConfirmationModal({
                 title: '{{ 'UI:Datatables:RowActions:ConfirmationDialog'|dict_s }}',
                 content: sMessage.replaceAll('{item}', aRowData['{{ aAction.confirmation.message_row_data }}']),
-                confirm_button_text: sAction,
+                confirm_button_label: sLabel,
                 callback_on_confirm: ActionRowFunction{{ oUIBlock.GetId() }}{{ loop.index0 }},
                 {% if aAction.confirmation.do_not_show_again_pref_key is defined %}
                 do_not_show_again_pref_key: '{{ aAction.confirmation.do_not_show_again_pref_key }}',
